--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "cd client && npm install && npm run build"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "~1.18.2",
     "concurrently": "^3.5.1",
     "cookie-parser": "~1.4.3",
@@ -20,6 +21,8 @@
     "hbs": "~4.0.1",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "react-router-dom": "^4.2.2",
+    "serve-favicon": "~2.4.5",
+    "styled-components": "^3.0.2"
   }
 }
