--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-media": "^1.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0",
+    "react-router-redux": "^5.0.0-alpha.9",
+    "react-scripts": "^1.1.0",
     "react-transition-group": "^2.2.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^3.0.2"
   },
   "proxy": "http://localhost:4000",
